--- a/RingTopologyPower/mainwindow.ui
+++ b/RingTopologyPower/mainwindow.ui
@@ -108,10 +108,30 @@
          <number>1000</number>
         </property>
         <property name="value">
-         <number>80</number>
+         <number>40</number>
         </property>
        </widget>
       </item>
+      <item>
+ <widget class="QLabel" name="label_9">
+  <property name="text">
+   <string>充电桩优先级:</string>
+  </property>
+ </widget>
+</item>
+<item>
+ <widget class="QSpinBox" name="prioritySpinBox">
+  <property name="minimum">
+   <number>1</number>
+  </property>
+  <property name="maximum">
+   <number>4</number>
+  </property>
+  <property name="value">
+   <number>1</number>
+  </property>
+ </widget>
+</item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
