<fix>Rebuild the logical senario where the pile get an occupied node, and develop a rough interface implementation.

--- a/RingTopologyPower/mainwindow.ui
+++ b/RingTopologyPower/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>环形拓扑功率分配系统</string>
+   <string>RingTopoPwrAllocator</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
